cambios al codigo en JS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p">Elija la cuenta a la que desea ingresar:</p>
 
                 <button type="button" class="btn btn-danger button1">ISAI</button>
-                <div id="contra1" ></div>
+                <!-- <div id="contra1" ></div> -->
 
                 <button type="button" class="btn btn-danger button2">JUAN</button>
 
@@ -56,7 +56,7 @@
                 
                 <button type="button" class=" btn retirar btn-primary re-monto">Retirar Monto</button>
                 
-                <button type="button" class=" btn btn-primary" id="salir" onclick="location.reload()">SALIR</button>
+                <button type="button" class=" btn btn-primary" id="salir" onclick="cerrarSesion()">SALIR</button>
             </div>
         </section>
     </main>
